2007-01-17  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_button_press): Don't eat the mouse events
	for now, as there's nothing on the end of the gst navigation
	events (Closes: #397572)

2007-01-17  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_error_from_gst_error): Fix typo spotted by
	Theppitak Karoonboonyanan <thep@linux.thai.net> (Closes: #397501)

2007-01-16  Bastien Nocera  <hadess@hadess.net>

	* src/totem-menu.c: (totem_recent_manager_changed_callback):
	C89 fix by Jens Granseuer <jensgr@gmx.net> (Closes: #397350)

2007-01-16  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c:
	(totem_embedded_launch_player): Avoid warning when
	no URI is passed directly when launching the stand-alone player

============ Version 2.17.5

2007-01-16  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.17.5

2007-01-16  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c: (totem_embedded_set_state),
	(totem_embedded_set_logo_by_name), (totem_embedded_push_parser):
	Go to the STOPPED state when we set an logo/error image, only "show"
	an error when we failed to parse a playlist, and go to the logo
	state after parsing an empty playlist (Closes: #350456)

2007-01-16  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/tests/8.html:
	* browser-plugin/tests/playlist-with-static-png.asx:
	Add a copy of test 7 but with a PNG image

2007-01-16  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/README: add MOZ_PLUGIN_PATH doc
	* browser-plugin/tests/7.html: 
	* browser-plugin/tests/playlist-with-static.asx:
	Add test for http://bugzilla.gnome.org/show_bug.cgi?id=358277
	* browser-plugin/tests/launch-web-server.sh:
	add a --remote option to allow remote machines to connect to
	our test cases, and remove the "ADDRESS" hack

2007-01-15  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser-wm.c: