@@ -2,4 +2,4 @@
 
 See <a href="http://bugzilla.gnome.org/show_bug.cgi?id=387332">http://bugzilla.gnome.org/show_bug.cgi?id=387332</a><p>
 
-<embed type="video/quicktime" src="/non-existant-file.mov" width="512" height="394" href="/mjpeg-totem-logo.mov" controller="false"></embed>
+<embed type="video/quicktime" src="/non-existant-file.mov" width="512" height="394" href="/mjpeg-totem-logo.mov" controller="false" target="myself"></embed>
